[project]
name = "adp-nets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "kornia>=0.8.2",
    "natsort>=8.4.0",
    "opencv-python>=4.13.0.90",
    "ptflops>=0.7.5",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
